--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,8 @@
     "es6": true
   },
   "plugins": [
-    "react"
+    "react",
+    "eslint-plugin-import"
   ],
   "parserOptions": {
     "sourceType": "module"
