--- a/package.json
+++ b/package.json
@@ -40,28 +40,29 @@
     "cross-env": "^5.1.4",
     "eslint-config-standard": "^11.0.0",
     "eslint-config-standard-react": "^6.0.0",
-    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.0",
     "eslint-plugin-react": "^7.10.0",
     "eslint-plugin-standard": "^3.1.0",
-    "node-sass": "^4.11.0",
     "gh-pages": "^1.2.0",
+    "node-sass": "^4.11.0",
     "react-scripts": "^2.1.8",
-    "vue": "^2.6.6",
-    "vue-template-compiler": "^2.6.10",
     "rollup": "^0.64.1",
-    "rollup-plugin-vue": "4.2.0",
-    "rollup-plugin-sass": "^1.2.2",
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^1.6.2",
-    "rollup-plugin-url": "^1.4.0"
+    "rollup-plugin-sass": "^1.2.2",
+    "rollup-plugin-url": "^1.4.0",
+    "rollup-plugin-vue": "4.2.0",
+    "vue": "^2.6.6",
+    "vue-template-compiler": "^2.6.10"
   },
   "dependencies": {
     "classnames": "^2.2.6",
+    "debounce": "^1.2.0",
     "easy-bem": "^1.0.0"
   },
   "files": [
