--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-react": "^7.10.0",
     "eslint-plugin-standard": "^3.1.0",
     "gh-pages": "^1.2.0",
+    "jest": "^24.7.1",
     "node-sass": "^4.11.0",
     "react-scripts": "^2.1.8",
     "rollup": "^0.64.1",
