--- a/package.json
+++ b/package.json
@@ -52,12 +52,14 @@
     "rollup": "^0.64.1",
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-css-only": "^1.0.0",
+    "rollup-plugin-embed-css": "^0.4.0",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^1.6.2",
     "rollup-plugin-sass": "^1.2.2",
     "rollup-plugin-url": "^1.4.0",
-    "rollup-plugin-vue": "4.2.0",
+    "rollup-plugin-vue": "^4.2.0",
     "vue": "^2.6.6",
     "vue-template-compiler": "^2.6.10"
   },
