--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.0",
-    "eslint-plugin-react": "^7.10.0",
+    "eslint-plugin-vue": "^7.13.0",
     "eslint-plugin-standard": "^3.1.0",
     "gh-pages": "^1.2.0",
     "jest": "^24.7.1",
