Altered babel, jest and eslint configs, refactor code

--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,5 @@
 {
-  "presets": [
-    ["env", {
-      "modules": false
-    }],
-    "stage-0"
-  ]
+	"presets": [
+		["@babel/preset-env"]
+	]
 }
