--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-advanced-cropper",
-  "version": "1.0.0",
+  "version": "0.8.0",
   "description": "The advanced library to create your own croppers suited fow any website design",
   "author": "Norserium",
   "license": "MIT",
@@ -22,19 +22,22 @@
     "npm": ">=5"
   },
   "scripts": {
-    "build": "rollup -c",
-    "start": "rollup -c -w",
+    "build": "cross-env NODE_ENV=build rollup -c",
+    "start": "cross-env NODE_ENV=build rollup -c -w",
     "prepare": "npm run build",
     "predeploy": "cd example && npm install && npm run build",
-    "deploy": "gh-pages -d example/build"
+    "deploy": "gh-pages -d example/build",
+    "test": "cross-env NODE_ENV=test jest"
   },
   "peerDependencies": {
     "vue": "^2.6.6"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-external-helpers": "^7.2.0",
+    "@vue/babel-preset-app": "^3.7.0",
     "babel-eslint": "^9.0.0",
-    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-jest": "^24.8.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
     "cross-env": "^5.1.4",
@@ -43,17 +46,17 @@
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.0",
-    "eslint-plugin-vue": "^7.13.0",
     "eslint-plugin-standard": "^3.1.0",
+    "eslint-plugin-vue": "^5.2.2",
     "gh-pages": "^1.2.0",
-    "jest": "^24.7.1",
+    "jest": "^24.8.0",
+    "jest-expect-message": "^1.0.2",
     "node-sass": "^4.11.0",
     "react-scripts": "^2.1.8",
     "rollup": "^0.64.1",
-    "rollup-plugin-babel": "^3.0.7",
+    "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^9.1.3",
-    "rollup-plugin-css-only": "^1.0.0",
-    "rollup-plugin-embed-css": "^0.4.0",
+    "rollup-plugin-includepaths": "^0.2.3",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^1.6.2",
@@ -66,7 +69,10 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "debounce": "^1.2.0",
-    "easy-bem": "^1.0.0"
+    "easy-bem": "^1.0.0",
+    "rollup-plugin-collect-sass": "^1.0.9",
+    "rollup-plugin-css-porter": "^1.0.2",
+    "rollup-pluginutils": "^2.7.1"
   },
   "files": [
     "dist"
