--- a/package.json
+++ b/package.json
@@ -57,22 +57,21 @@
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-includepaths": "^0.2.3",
+    "rollup-plugin-merge-and-inject-css": "^1.0.0",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^1.6.2",
     "rollup-plugin-sass": "^1.2.2",
     "rollup-plugin-url": "^1.4.0",
-    "rollup-plugin-vue": "^4.2.0",
+    "rollup-plugin-vue": "4.2.0",
+    "style-inject": "^0.3.0",
     "vue": "^2.6.6",
     "vue-template-compiler": "^2.6.10"
   },
   "dependencies": {
     "classnames": "^2.2.6",
     "debounce": "^1.2.0",
-    "easy-bem": "^1.0.0",
-    "rollup-plugin-collect-sass": "^1.0.9",
-    "rollup-plugin-css-porter": "^1.0.2",
-    "rollup-pluginutils": "^2.7.1"
+    "easy-bem": "^1.0.0"
   },
   "files": [
     "dist"
