--- a/package.json
+++ b/package.json
@@ -51,13 +51,13 @@
     "gh-pages": "^1.2.0",
     "jest": "^24.8.0",
     "jest-expect-message": "^1.0.2",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.12.0",
     "react-scripts": "^2.1.8",
     "rollup": "^1.12.4",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-includepaths": "^0.2.3",
-    "rollup-plugin-merge-and-inject-css": "^1.0.1",
+    "rollup-plugin-merge-and-inject-css": "^1.1.1",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^1.6.2",
@@ -66,6 +66,7 @@
     "rollup-plugin-url": "^1.4.0",
     "rollup-plugin-visualizer": "^1.1.1",
     "rollup-plugin-vue": "4.2.0",
+    "sass-loader": "^7.1.0",
     "style-inject": "^0.3.0",
     "vue": "^2.6.6",
     "vue-template-compiler": "^2.6.10"
