--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 
 # See https://help.github.com/ignore-files/ for more about ignoring files.
-
 # dependencies
 node_modules
 
@@ -22,3 +21,6 @@ dist
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+testing-internet-explorer/
+
