--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@babel/core": "^7.4.5",
     "@babel/plugin-external-helpers": "^7.2.0",
     "@vue/babel-preset-app": "^3.7.0",
+    "autoprefixer": "^9.6.0",
     "babel-eslint": "^9.0.0",
     "babel-jest": "^24.8.0",
     "babel-preset-env": "^1.7.0",
