--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,10 @@
 			"tab"
 		],
 		"no-tabs": "off",
-		"vue/require-default-prop": "off"
+		"vue/require-default-prop": "off",
+		"object-curly-spacing": ["error", "always", {
+			"arraysInObjects": false,
+			"objectsInObjects": false
+		}]
 	}
 }
