--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "start": "cross-env NODE_ENV=build rollup -c -w",
     "prepare": "npm run build",
     "predeploy": "cd example && npm install && npm run build",
-    "deploy": "gh-pages -d example/build",
+    "deploy": "gh-pages -d example/docs/.vuepress/dist",
     "test": "cross-env NODE_ENV=test jest"
   },
   "peerDependencies": {
@@ -58,7 +58,7 @@
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-includepaths": "^0.2.3",
-    "rollup-plugin-merge-and-inject-css": "^1.1.1",
+    "rollup-plugin-merge-and-inject-css": "^1.1.2",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^1.6.2",
