--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "vue-advanced-cropper",
-  "version": "0.8.0",
+  "version": "0.8.1",
   "description": "The advanced library to create your own croppers suited fow any website design",
   "author": "Norserium",
   "license": "MIT",
   "repository": "norserium/vue-advanced-cropper",
   "main": "dist/index.js",
+  "umd": "dist/index.umd.js",
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
   "keywords": [
@@ -56,6 +57,7 @@
     "react-scripts": "^2.1.8",
     "rollup": "^1.12.4",
     "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-babel-minify": "^8.0.0",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-includepaths": "^0.2.3",
     "rollup-plugin-merge-and-inject-css": "^1.1.2",
@@ -75,7 +77,7 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "debounce": "^1.2.0",
-    "easy-bem": "^1.0.0"
+    "easy-bem": "^1.0.2"
   },
   "files": [
     "dist"
