--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 # dependencies
 node_modules
@@ -24,3 +23,5 @@ yarn-error.log*
 
 testing-internet-explorer/
 example/package-lock.json
+
+.idea
