--- a/package.json
+++ b/package.json
@@ -1,85 +1,100 @@
 {
-  "name": "vue-advanced-cropper",
-  "version": "0.11.0",
-  "description": "The advanced library to create your own croppers suited for any website design",
-  "author": "Norserium",
-  "license": "MIT",
-  "repository": "norserium/vue-advanced-cropper",
-  "main": "dist/index.js",
-  "umd": "dist/index.umd.js",
-  "module": "dist/index.es.js",
-  "jsnext:main": "dist/index.es.js",
-  "keywords": [
-    "vue",
-    "cropper",
-    "library",
-    "advanced",
-    "lightweight",
-    "customizable",
-    "flex"
-  ],
-  "engines": {
-    "node": ">=8",
-    "npm": ">=5"
-  },
-  "scripts": {
-    "build": "cross-env NODE_ENV=build rollup -c",
-    "start": "cross-env NODE_ENV=build rollup -c -w",
-    "prepare": "npm run build",
-    "predeploy": "cd example && npm install && npm run build",
-    "deploy": "gh-pages -d example/docs/.vuepress/dist",
-    "test": "cross-env NODE_ENV=test jest"
-  },
-  "peerDependencies": {
-    "vue": "^2.6.6"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-external-helpers": "^7.2.0",
-    "@vue/babel-preset-app": "^3.7.0",
-    "autoprefixer": "^9.6.0",
-    "babel-eslint": "^9.0.0",
-    "babel-jest": "^24.8.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-0": "^6.24.1",
-    "cross-env": "^5.1.4",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-config-standard-react": "^6.0.0",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-promise": "^4.0.0",
-    "eslint-plugin-standard": "^3.1.0",
-    "eslint-plugin-vue": "^5.2.2",
-    "gh-pages": "^1.2.0",
-    "jest": "^24.8.0",
-    "jest-expect-message": "^1.0.2",
-    "node-sass": "^4.12.0",
-    "react-scripts": "^3.0.1",
-    "rollup": "^1.12.4",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-babel-minify": "^8.0.0",
-    "rollup-plugin-commonjs": "^9.1.3",
-    "rollup-plugin-includepaths": "^0.2.3",
-    "rollup-plugin-merge-and-inject-css": "^1.1.2",
-    "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-peer-deps-external": "^2.2.0",
-    "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-sass": "^1.2.2",
-    "rollup-plugin-size-snapshot": "^0.9.0",
-    "rollup-plugin-url": "^1.4.0",
-    "rollup-plugin-visualizer": "^1.1.1",
-    "rollup-plugin-vue": "4.2.0",
-    "sass-loader": "^7.1.0",
-    "style-inject": "^0.3.0",
-    "vue": "^2.6.6",
-    "vue-template-compiler": "^2.6.10"
-  },
-  "dependencies": {
-    "classnames": "^2.2.6",
-    "debounce": "^1.2.0",
-    "easy-bem": "^1.0.2"
-  },
-  "files": [
-    "dist"
-  ]
+	"name": "vue-advanced-cropper",
+	"version": "0.11.0",
+	"description": "The advanced library to create your own croppers suited for any website design",
+	"author": "Norserium",
+	"license": "MIT",
+	"repository": "Norserium/vue-advanced-cropper",
+	"main": "dist/index.js",
+	"umd": "dist/index.umd.js",
+	"module": "dist/index.es.js",
+	"jsnext:main": "dist/index.es.js",
+	"keywords": [
+		"vue",
+		"cropper",
+		"library",
+		"advanced",
+		"lightweight",
+		"customizable",
+		"flex"
+	],
+	"engines": {
+		"node": ">=8",
+		"npm": ">=5"
+	},
+	"scripts": {
+		"build": "cross-env NODE_ENV=build rollup -c",
+		"start": "cross-env NODE_ENV=build rollup -c -w",
+		"prepare": "npm run build",
+		"predeploy": "cd example && npm install && npm run build",
+		"deploy": "gh-pages -d example/docs/.vuepress/dist",
+		"test": "cross-env NODE_ENV=test jest",
+		"lint": "eslint src/**/*.{js,vue} example/docs/.vuepress/**/*.{js,vue}",
+		"lint:fix": "eslint --fix src/**/*.{js,vue} example/docs/.vuepress/**/*.{js,vue} "
+	},
+	"peerDependencies": {
+		"vue": "^2.6.6"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.4.5",
+		"@babel/plugin-external-helpers": "^7.2.0",
+		"@vue/babel-preset-app": "^3.7.0",
+		"autoprefixer": "^9.6.0",
+		"babel-eslint": "^9.0.0",
+		"babel-jest": "^24.8.0",
+		"babel-preset-env": "^1.7.0",
+		"babel-preset-stage-0": "^6.24.1",
+		"cross-env": "^5.1.4",
+		"eslint-config-standard": "^11.0.0",
+		"eslint-config-standard-react": "^6.0.0",
+		"eslint-plugin-import": "^2.17.2",
+		"eslint-plugin-node": "^7.0.1",
+		"eslint-plugin-promise": "^4.0.0",
+		"eslint-plugin-standard": "^3.1.0",
+		"eslint-plugin-vue": "^5.2.2",
+		"eslint-plugin-vue-libs": "^4.0.0",
+		"gh-pages": "^1.2.0",
+		"husky": "^3.0.3",
+		"jest": "^24.8.0",
+		"jest-expect-message": "^1.0.2",
+		"lint-staged": "^9.2.1",
+		"node-sass": "^4.12.0",
+		"react-scripts": "^3.0.1",
+		"rollup": "^1.12.4",
+		"rollup-plugin-babel": "^4.3.2",
+		"rollup-plugin-babel-minify": "^8.0.0",
+		"rollup-plugin-commonjs": "^9.1.3",
+		"rollup-plugin-includepaths": "^0.2.3",
+		"rollup-plugin-merge-and-inject-css": "^1.1.2",
+		"rollup-plugin-node-resolve": "^5.2.0",
+		"rollup-plugin-peer-deps-external": "^2.2.0",
+		"rollup-plugin-postcss": "^2.0.3",
+		"rollup-plugin-sass": "^1.2.2",
+		"rollup-plugin-size-snapshot": "^0.9.0",
+		"rollup-plugin-url": "^2.2.2",
+		"rollup-plugin-visualizer": "^1.1.1",
+		"rollup-plugin-vue": "4.2.0",
+		"sass-loader": "^7.1.0",
+		"style-inject": "^0.3.0",
+		"vue": "^2.6.6",
+		"vue-template-compiler": "^2.6.10"
+	},
+	"dependencies": {
+		"classnames": "^2.2.6",
+		"debounce": "^1.2.0",
+		"easy-bem": "^1.0.2"
+	},
+	"files": [
+		"dist"
+	],
+	"lint-staged": {
+		"*.{js, jsx}": [
+			"eslint"
+		]
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged \"src/**/*.{js,vue} example/.vuepress/**/*.{js,vue}\""
+		}
+	}
 }
