--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "vue-advanced-cropper",
-	"version": "0.15.0",
+	"version": "0.15.1",
 	"description": "The advanced library to create your own croppers suited for any website design",
 	"author": "Norserium",
 	"license": "MIT",
@@ -23,7 +23,7 @@
 		"npm": ">=5"
 	},
 	"scripts": {
-		"build": "cross-env NODE_ENV=build rollup -c",
+		"build": "cross-env NODE_ENV=production rollup -c",
 		"start": "cross-env NODE_ENV=build rollup -c -w",
 		"prepare": "npm run build",
 		"predeploy": "cd example && npm install && npm run build",
