--- a/package.json
+++ b/package.json
@@ -70,7 +70,6 @@
 		"rollup-plugin-peer-deps-external": "^2.2.0",
 		"rollup-plugin-postcss": "^2.0.3",
 		"rollup-plugin-sass": "^1.2.2",
-		"rollup-plugin-size-snapshot": "^0.9.0",
 		"rollup-plugin-url": "^2.2.2",
 		"rollup-plugin-visualizer": "^1.1.1",
 		"rollup-plugin-vue": "5.0.1",
@@ -82,7 +81,8 @@
 	"dependencies": {
 		"classnames": "^2.2.6",
 		"debounce": "^1.2.0",
-		"easy-bem": "^1.0.2"
+		"easy-bem": "^1.0.2",
+		"rollup-plugin-analyzer": "^3.3.0"
 	},
 	"files": [
 		"dist"
