--- a/package.json
+++ b/package.json
@@ -38,6 +38,11 @@
 	"devDependencies": {
 		"@babel/core": "^7.11.6",
 		"@babel/plugin-external-helpers": "^7.10.4",
+		"@rollup/plugin-replace": "^2.3.3",
+		"@rollup/plugin-babel": "^5.0.4",
+		"@rollup/plugin-commonjs": "^13.0.0",
+		"@rollup/plugin-node-resolve": "^9.0.0",
+		"@rollup/plugin-url": "^5.0.1",
 		"@vue/babel-preset-app": "^3.12.1",
 		"autoprefixer": "^9.8.6",
 		"babel-eslint": "^9.0.0",
@@ -58,21 +63,14 @@
 		"jest": "^24.9.0",
 		"jest-expect-message": "^1.0.2",
 		"lint-staged": "^9.5.0",
-		"node-sass": "^4.14.1",
+		"sass": "^1.26.10",
 		"react-scripts": "^3.4.3",
-		"rollup": "^1.32.1",
-		"rollup-plugin-babel": "^4.4.0",
-		"rollup-plugin-babel-minify": "^8.0.0",
-		"rollup-plugin-commonjs": "^9.1.3",
-		"rollup-plugin-includepaths": "^0.2.4",
+		"rollup": "^2.26.10",
 		"rollup-plugin-merge-and-inject-css": "^1.1.3",
-		"rollup-plugin-node-resolve": "^5.2.0",
 		"rollup-plugin-peer-deps-external": "^2.2.3",
-		"rollup-plugin-postcss": "^2.9.0",
-		"rollup-plugin-sass": "^1.2.2",
-		"rollup-plugin-url": "^2.2.4",
 		"rollup-plugin-visualizer": "^1.1.1",
-		"rollup-plugin-vue": "5.0.1",
+		"rollup-plugin-babel-minify": "^10.0.0",
+		"rollup-plugin-vue": "^5.1.9",
 		"sass-loader": "^7.3.1",
 		"style-inject": "^0.3.0",
 		"vue": "^2.6.12",
