--- a/package.json
+++ b/package.json
@@ -38,11 +38,14 @@
 	"devDependencies": {
 		"@babel/core": "^7.11.6",
 		"@babel/plugin-external-helpers": "^7.10.4",
-		"@rollup/plugin-replace": "^2.3.3",
 		"@rollup/plugin-babel": "^5.0.4",
 		"@rollup/plugin-commonjs": "^13.0.0",
 		"@rollup/plugin-node-resolve": "^9.0.0",
+		"@rollup/plugin-replace": "^2.3.3",
+		"@rollup/plugin-typescript": "^6.1.0",
 		"@rollup/plugin-url": "^5.0.1",
+		"@typescript-eslint/eslint-plugin": "^4.6.0",
+		"@typescript-eslint/parser": "^4.6.0",
 		"@vue/babel-preset-app": "^3.12.1",
 		"autoprefixer": "^9.8.6",
 		"babel-eslint": "^9.0.0",
@@ -50,9 +53,12 @@
 		"babel-preset-env": "^1.7.0",
 		"babel-preset-stage-0": "^6.24.1",
 		"cross-env": "^5.2.1",
+		"eslint": "^5.16.0",
+		"eslint-config-prettier": "^6.11.0",
 		"eslint-config-standard": "^11.0.0",
 		"eslint-plugin-import": "^2.22.0",
 		"eslint-plugin-node": "^7.0.1",
+		"eslint-plugin-prettier": "^3.1.4",
 		"eslint-plugin-promise": "^4.2.1",
 		"eslint-plugin-standard": "^3.1.0",
 		"eslint-plugin-vue": "^5.2.3",
@@ -62,14 +68,16 @@
 		"jest": "^24.9.0",
 		"jest-expect-message": "^1.0.2",
 		"lint-staged": "^9.5.0",
-		"sass": "^1.26.10",
+		"prettier": "^2.1.2",
 		"rollup": "^2.26.10",
+		"rollup-plugin-babel-minify": "^10.0.0",
 		"rollup-plugin-merge-and-inject-css": "^1.1.3",
 		"rollup-plugin-peer-deps-external": "^2.2.3",
 		"rollup-plugin-visualizer": "^1.1.1",
-		"rollup-plugin-babel-minify": "^10.0.0",
 		"rollup-plugin-vue": "^5.1.9",
+		"sass": "^1.26.10",
 		"sass-loader": "^7.3.1",
+		"typescript": "^4.0.5",
 		"vue": "^2.6.12",
 		"vue-template-compiler": "^2.6.12"
 	},
@@ -82,7 +90,8 @@
 		"dist"
 	],
 	"lint-staged": {
-		"*.{js,vue}": [
+		"*.{js,vue,ts}": [
+			"prettier --write",
 			"eslint"
 		]
 	},
