--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"@rollup/plugin-replace": "^2.3.3",
 		"@rollup/plugin-typescript": "^6.1.0",
 		"@rollup/plugin-url": "^5.0.1",
+		"@types/jest": "^26.0.15",
 		"@typescript-eslint/eslint-plugin": "^4.6.0",
 		"@typescript-eslint/parser": "^4.6.0",
 		"@vue/babel-preset-app": "^3.12.1",
@@ -65,7 +66,7 @@
 		"eslint-plugin-vue-libs": "^4.0.0",
 		"gh-pages": "^1.2.0",
 		"husky": "^3.1.0",
-		"jest": "^24.9.0",
+		"jest": "^26.6.1",
 		"jest-expect-message": "^1.0.2",
 		"lint-staged": "^9.5.0",
 		"prettier": "^2.1.2",
@@ -77,6 +78,7 @@
 		"rollup-plugin-vue": "^5.1.9",
 		"sass": "^1.26.10",
 		"sass-loader": "^7.3.1",
+		"ts-jest": "^26.4.3",
 		"typescript": "^4.0.5",
 		"vue": "^2.6.12",
 		"vue-template-compiler": "^2.6.12"
