--- a/example/package.json
+++ b/example/package.json
@@ -18,8 +18,10 @@
 		"@vue/cli-service": "^3.5.0",
 		"node-sass": "^4.12.0",
 		"sass-loader": "^7.1.0",
+		"typescript": "^4.0.5",
 		"vue-template-compiler": "^2.5.21",
-		"vuepress": "1.0.1"
+		"vuepress": "1.0.1",
+		"vuepress-plugin-typescript": "^0.3.1"
 	},
 	"postcss": {
 		"plugins": {
