--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
 		"rollup-plugin-babel-minify": "^10.0.0",
 		"rollup-plugin-merge-and-inject-css": "^1.1.3",
 		"rollup-plugin-peer-deps-external": "^2.2.3",
+		"rollup-plugin-scss": "^2.6.1",
 		"rollup-plugin-visualizer": "^1.1.1",
 		"rollup-plugin-vue": "^5.1.9",
 		"sass": "^1.26.10",
