--- a/package.json
+++ b/package.json
@@ -71,10 +71,9 @@
 		"lint-staged": "^9.5.0",
 		"prettier": "^2.1.2",
 		"rollup": "^2.26.10",
-		"rollup-plugin-babel-minify": "^10.0.0",
-		"rollup-plugin-merge-and-inject-css": "^1.1.3",
 		"rollup-plugin-peer-deps-external": "^2.2.3",
 		"rollup-plugin-scss": "^2.6.1",
+		"rollup-plugin-terser": "^7.0.2",
 		"rollup-plugin-visualizer": "^1.1.1",
 		"rollup-plugin-vue": "^5.1.9",
 		"sass": "^1.26.10",
