--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"npm": ">=5"
 	},
 	"scripts": {
-		"build": "cross-env NODE_ENV=production rollup -c",
+		"build": "cross-env NODE_ENV=production rollup -c && node build/build.js",
 		"start": "cross-env NODE_ENV=build rollup -c -w",
 		"prepare": "npm run build",
 		"predeploy": "cd example && npm install && npm run build",
