--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "vue-advanced-cropper",
-	"version": "2.0.3",
+	"version": "2.2.0",
 	"description": "The advanced library to create your own croppers suited for any website design",
 	"author": "Norserium",
 	"license": "MIT",
@@ -34,7 +34,7 @@
 		"lint:fix": "eslint --fix src/**/*.{js,vue}"
 	},
 	"peerDependencies": {
-		"vue": "3.0.3"
+		"vue": "^3.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.11.6",
