--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
 		"lint:fix": "eslint --fix src/**/*.{js,vue}"
 	},
 	"peerDependencies": {
-		"vue": "3.0.3"
+		"vue": "^3.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.11.6",
