--- a/example/package.json
+++ b/example/package.json
@@ -16,6 +16,7 @@
 	"devDependencies": {
 		"@vue/cli-plugin-babel": "^3.5.0",
 		"@vue/cli-service": "^3.5.0",
+		"@vuepress/plugin-search": "^1.8.2",
 		"node-sass": "^4.12.0",
 		"sass-loader": "^7.1.0",
 		"typescript": "^4.0.5",
