--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
 		"lint:fix": "eslint --fix src/**/*.{js,vue}"
 	},
 	"peerDependencies": {
-		"vue": "^3.0"
+		"vue": "^3.0.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.11.6",
@@ -49,7 +49,7 @@
 		"@typescript-eslint/eslint-plugin": "^2.34.0",
 		"@typescript-eslint/parser": "^4.6.0",
 		"@vue/babel-preset-app": "^3.12.1",
-		"@vue/compiler-sfc": "^3.0.3",
+		"@vue/compiler-sfc": "~3.1.5",
 		"autoprefixer": "^9.8.6",
 		"babel-eslint": "^9.0.0",
 		"babel-jest": "^24.9.0",
@@ -82,7 +82,7 @@
 		"sass-loader": "^7.3.1",
 		"ts-jest": "^26.4.3",
 		"typescript": "^4.0.5",
-		"vue": "3.0.3"
+		"vue": "~3.1.5"
 	},
 	"dependencies": {
 		"classnames": "^2.2.6",
